[package]
name = "proxypot"
version = "0.2.4"
edition = "2021"
description = "Proxies all incoming connections to a minecraft server of your choosing, while also logging all ping and login requests to a json file and discord webhook."
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.23"
tokio = { version = "1",  features = ["full"] }
toml = "0.5"
serde = "1.0.144"
serde_json = "1.0.85"
time = {version = "0.3.14", features = ["serde", "formatting"]}
ipinfo = "0.3.1"
owo-colors = "3.5.0"
anyhow = "1.0.62"
clap = { version = "3.2.18", features = ["derive"] }
webhook = { git = "https://github.com/cleonyc/webhook-rs", branch = "fix-embed-field-check" }
isahc = { version = "1.7.2", features = ["json"]}
azalea-protocol = { git = "https://github.com/mat-1/azalea"}
azalea-crypto = { git = "https://github.com/mat-1/azalea"}
azalea-buf = { git = "https://github.com/mat-1/azalea"}
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
rand = "0.8.5"
tokio-util = "0.7.3"
bytes = "1.2.1"
downloader = { version = "0.2.6", features = ["tui"] }

[profile.release]
lto = true
